syntax = "proto3";

package logproto;

option go_package = "stackmonitor.com/logproto";

service LogIngestion {
  rpc StreamLogs(stream LogBatch) returns (stream Ack);
}

message LogBatch {
  string agent_id = 1;
  int64 batch_id = 2;
  int64 timestamp_ms = 3;
  repeated LogEntry logs = 4;
  CompressionType compression = 5;
  bytes compressed_payload = 6;
  int32 original_size = 7;
  map<string, string> metadata = 8;
}

message LogEntry {
  int64 timestamp_ns = 1;
  string level = 2;
  string message = 3;
  string source = 4;
  map<string, string> fields = 5;
  string agent_id = 6;
}

message Ack {
  int64 batch_id = 1;
  AckStatus status = 2;
  string message = 3;
  int64 server_timestamp_ms = 4;
}

enum AckStatus {
  SUCCESS = 0;
  RETRY = 1;
  DROP = 2;
}

enum CompressionType {
  NONE = 0;
  ZSTD = 1;
  LOGLITE = 2;
}
